# Stem-splitter

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  bass.py  bassex.py  ex.py  main.py  pyproject.toml  readthedocs.yaml  requirements.txt  verify_pipeline.py
docs/: IO_MODULE.md  requirements.txt  testing.md
docs/_build/doctrees/: environment.pickle  hystemfx.bass.doctree  hystemfx.core.doctree  hystemfx.doctree  hystemfx.guitar.doctree  hystemfx.synth.doctree  hystemfx.vocal.doctree  index.doctree  modules.doctree  quickstart.doctree
docs/_build/html/: .buildinfo  genindex.html  hystemfx.bass.html  hystemfx.core.html  hystemfx.guitar.html  hystemfx.html  hystemfx.synth.html  hystemfx.vocal.html  index.html  modules.html  objects.inv  quickstart.html  search.html  searchindex.js
docs/_build/html/_sources/: modules.rst.txt
docs/source/: conf.py  hystemfx.bass.rst  hystemfx.core.rst  hystemfx.guitar.rst  hystemfx.rst  hystemfx.synth.rst  hystemfx.vocal.rst  index.rst  quickstart.rst
hystemfx/: __init__.py  pipeline.py  stft.py
hystemfx/bass/: __init__.py  effects.py  example.py  pipeline.py  separator.py
hystemfx/core/: effect_block.py  io.py  separator.py  seperator.py
hystemfx/guitar/: __init__.py  effects.py  pipeline.py  separator.py
hystemfx/synth/: NOISE_GATE.md  README.md  __init__.py  effects.py  example.py  pipeline.py  separator.py
hystemfx/synth/scripts/: README.md  add_minimal_effects.py  apply_final_effects.py  compare_versions.py  fine_tune_effects.py  super_fine_tune.py
hystemfx/vocal/: __init__.py  effect_chain.py  effect_processor.py  effects.py  example.py  pipeline.py  postprocess.py  separator.py
src/: config.py  data_loader.py  export_images.py  features.py  istft.py  preprocess.py  train.py  utils & spectrogram.py  utils.py  visualization.py
src/guitar/: filter.py  harmonic.py  processor.py  spatial.py
test/: spec_test.py
tests/: test_core_separator_contract.py  test_fx_determinism.py  test_guitar_effect_blocks.py  test_guitar_effects_chain.py  test_synth_effects_chain.py  test_vocal_pipeline_robustness.py  tests.md
