[project]
name = "hystemfx" 
version = "0.1.0"
description = "Audio source separation and effect processing library"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "demucs>=4.0.1",
    "librosa>=0.11.0",
    "numpy<2.0",
    "pedalboard>=0.9.19",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=0.5.1",
    "torch",
    "torchaudio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hystemfx"]
